--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,39 +1,84 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <meta charset="utf-8">
+{% extends "bootstrap/base.html" %}
+
+{% block title %}
     {% if title %}
-      <title>{{ title }} - Microblog</title>
+      {{  title  }} - Microblog
     {% else %}
-      <title>Welcome to Microblog</title>
+      {{  _("Welcome to Microblog")  }})
     {% endif %}
-  </head>
-  <body>
-    <div>
-      Microblog:
-        <a href="{{ url_for('index') }}">Home</a>
-        {% if current_user.is_anonimous %}
-        <a href="{{ url_for('login') }}">Log In</a>
-        {% else %}
-        <a href="{{ url_for('user', username=current_user.username) }}">Profile</a>
-        <a href="{{ url_for('logout') }}">Log Out</a>
-        <a href="{{ url_for('explore') }}">Explore</a>
+{% endblock %}
+
+{% block navbar %}
+    <nav class="navbar navbar-default">
+        <div class = "container">
+          <div class="navbar-header">
+            <button type = "button" class = "navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="{{ url_for('index') }}">Microblog</a>
+
+          </div>
+          <div class='collapse navbar-collapse' id='bs-example-navbar-collapse-1'>
+            <ul class="nav navbar-nav">
+              <li><a href="{{ url_for('index') }}">{{ _("Home") }}</a></li>
+              <li><a href="{{ url_for('explore') }}">{{ _('Explore') }}</a></li>
+            </ul>
+            {% if g.search_form %}
+            <form class="navbar-form navbar-left" method="get" action="{{ url_for('search') }}">
+                <div class="form-group">
+                    {{ g.search_form.q(size=20, class='form-control', placeholder=g.search_form.q.label.text) }}
+                </div>
+            </form>
+            {% endif %}
+            <ul class="nav navbar-nav navbar-right">
+            {% if current_user.is_anonymous %}
+              <li><a href="{{ url_for('register') }}">{{ _('Register') }}</a></li>
+              <li><a href="{{ url_for('login') }}">{{ _('Login') }}</a></li>
+            {% else %}
+              <li><a href="{{ url_for('user', username=current_user.username) }}">{{ _('Profile') }}</a></li>
+              <li><a href="{{ url_for('logout') }}">{{ _('Logout') }}</a></li>
+            {% endif %}
+            </ul>
+          </div>
+        </div>
+    </nav>
+{% endblock %}
+
+{% block content %}
+    <div class="container">
+        {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            {% for message in messages %}
+            <div class="alert alert-info" role="alert">{{ message }}</div>
+            {% endfor %}
         {% endif %}
+        {% endwith %}
 
+        {# application content needs to be provided in the app_content block #}
+        {% block app_content %}{% endblock %}
     </div>
-    <hr>
-    {% with messages = get_flashed_messages() %}
-    {% if messages %}
-    <ul>
-      {% for message in messages %}
-      <li>{{ message }}</li>
-      {% endfor %}
-    </ul>
-    {% endif %}
-    {% endwith %}
+{% endblock %}
 
-    {% block content %}
-    {% endblock %}
-  </body>
-</html>
+{% block scripts %}
+    {{ super() }}
+    {{ moment.include_moment() }}
+    {{ moment.lang(g.locale) }}
+
+    <script>
+    function translate(sourceElem, destElem, sourceLang, destLang) {
+        $(destElem).html('<img src="{{ url_for('static', filename='loading.gif') }}">');
+        $.post('/translate', {
+            text: $(sourceElem).text(),
+            source_language: sourceLang,
+            dest_language: destLang
+        }).done(function(response) {
+            $(destElem).text(response['text'])
+        }).fail(function() {
+            $(destElem).text("{{ _('Error: Could not contact server.') }}");
+        });
+    }
+    </script>
+{% endblock %}
