--- a/app/templates/edit_profile.html
+++ b/app/templates/edit_profile.html
@@ -1,23 +1,8 @@
-{% extends 'base.html' %}
-{% block content %}
-<form action="" method = "POST">
-  {{ form.hidden_tag() }}
-  <p>
-    {{ form.username.label }}<br>
-    {{ form.username(size = 32) }}<br>
-    {% for error in form.username.errors %}
-      <span style="color:red;">{{ error }}</span>
-    {% endfor %}
-  </p>
-  <p>
-    {{ form.about_me.label }}<br>
-    {{ form.about_me(cols = 50, rows = 4) }}<br>
-    {% for error in form.about_me.errors %}
-      <span style="color:red;">{{ error }}</span>
-    {% endfor %}
-  </p>
-  <p>
-    {{ form.submit() }}
-  </p>
-</form>
+{% extends "base.html" %}
+{% import "bootstrap/wtf.html" as wtf %}
+{% block app_content %}
+<h1>{{  _('Edit profile')  }}</h1>
+<div class = 'row'>
+  {{ wtf.quick_form(form) }}
+</div>
 {% endblock %}
