--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,30 +1,8 @@
-{% extends 'base.html' %}
-
-{% block content %}
-  <h1>Sign In</h1>
-
-  <form action="" method = "POST" novalidate style="margin-left:3%">
-    {{ form.hidden_tag() }}
-    <p>
-      {{ form.username.label }} <br>
-      {{ form.username(size=24, class="alert alert-primary")}}
-      {% for error in form.username.errors %}
-      <span style="color:red;">[{{ error }}]</span>
-      {% endfor %}
-    </p>
-    <p>
-      {{ form.password.label }} <br>
-      {{ form.password(size=24, class="alert alert-primary")}}
-      {% for error in form.password.errors %}
-      <span style="color:red;">[{{ error }}]</span>
-      {% endfor %}
-    </p>
-    <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
-    <p>{{ form.submit() }}</p>
-  </form>
-  <p><a href="{{ url_for('register') }}">Register new account<a/></p>
-  <p>
-    Forgot Your Password?
-    <a href="{{ url_for('reset_password_request') }}">Reset Password</a>
-  </p>
+{% extends "base.html" %}
+{% import "bootstrap/wtf.html" as wtf %}
+{% block app_content %}
+<h1>Log In</h1>
+<div class='row'>
+  {{ wtf.quick_form(form) }}
+</div>
 {% endblock %}
