--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
-
-{% block content %}
+{% import 'bootstrap/wtf.html' as wtf %}
+{% block app_content %}
 <div><table>
     <tr valign="top">
         <tr><td><img src="{{ user.avatar(128) }}"></td>
@@ -10,24 +10,23 @@
         <p>{{ user.about_me }}</p>
         {% endif %}
         {% if user.last_seen %}
-        <p>Last seen: {{ user.last_seen }}</p>
+        <p>{{ _('Last seen on') }}: {{ moment(user.last_seen).format('LLL') }}</p>
         {% endif %}
-
-        <p>{{ user.followers.count() }} followers, {{ user.followed.count() }} following.</p>
+        <p>{{  _('%(count)s followers', count=user.followers.count())  }}, {{  _('%(count)s following', count=user.followed.count())  }}</p>
         {% if user == current_user %}
-        <p><a href="{{ url_for('edit_profile', username=current_user.username) }}">Edit your profile</a></p>
+        <p><a href="{{ url_for('edit_profile', username=current_user.username) }}">{{ _('Edit your profile') }}</a></p>
         {% elif not current_user.is_following(user) %}
         <p>
             <form action="{{ url_for('follow', username=user.username) }}" method="post">
-                {{ form.hidden_tag() }}
-                {{ form.submit(value='Follow') }}
+                {{  form.hidden_tag()  }}
+                {{  form.submit(value='Follow')  }}
             </form>
         </p>
         {% else %}
         <p>
             <form action="{{ url_for('unfollow', username=user.username) }}" method="post">
-                {{ form.hidden_tag() }}
-                {{ form.submit(value='Unfollow') }}
+                {{  form.hidden_tag()  }}
+                {{  form.submit(value='Unfollow')  }}
             </form>
         </p>
         {% endif %}
